Fixed alignment between header elements

--- a/styles/main.css
+++ b/styles/main.css
@@ -83,3 +83,37 @@ body {
 }
 
 /** ------------ CARD ------------ */
+.extensions__card {
+	background-color: #ccc;
+	border-radius: 1rem;
+	width: 100%;
+	padding: 1rem;
+}
+
+.extensions__card:not(:last-child) {
+	margin-bottom: 1.6rem;
+}
+
+.extensions__header {
+	display: flex;
+	column-gap: 5%;
+	align-items: flex-start;
+}
+
+.extensions__header-content {
+	display: inline;
+}
+.extensions__header-content > p {
+	font-size: 1.6rem;
+	width: 90%;
+}
+
+.extensions__header-content > h3 {
+	font-size: 2rem;
+	margin-top: 0;
+}
+
+.extensions__toggle-container {
+	display: flex;
+	justify-content: space-between;
+}
